--- a/package.json
+++ b/package.json
@@ -23,5 +23,18 @@
   "bugs": {
     "url": "https://github.com/matheuspbmarques/molige/issues"
   },
-  "homepage": "https://github.com/matheuspbmarques/molige#readme"
+  "homepage": "https://github.com/matheuspbmarques/molige#readme",
+  "dependencies": {
+    "mongodb": "^6.17.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^30.0.0-beta.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3"
+  }
 }
