--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MoLiGe is a mock list generator easily used to help us don't need a real database list from back-end. ",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "npx tsc -p ./src/types/tsconfig.types.json && npx tsc -p ./tsconfig.json"
   },
   "repository": {
     "type": "git",
