--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@types/jest": "^29.5.14",
-    "babel-jest": "^30.0.0-beta.3",
+    "babel-jest": "^29.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.4",
