--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "molige",
   "version": "1.0.1",
   "description": "MoLiGe is a mock list generator easily used to help us don't need a real database list from back-end. ",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
     "build": "npx tsc -p ./src/types/tsconfig.types.json && npx tsc -p ./tsconfig.json",
