--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "url": "https://github.com/matheuspbmarques/molige/issues"
   },
   "homepage": "https://github.com/matheuspbmarques/molige#readme",
-  "dependencies": {
-    "mongodb": "^6.17.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
@@ -37,7 +34,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "mongodb": "^6.17.0"
   },
   "peerDependencies": {
     "mongodb": "^6.17.0"
