--- a/package.json
+++ b/package.json
@@ -34,10 +34,6 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3",
-    "mongodb": "^6.17.0"
-  },
-  "peerDependencies": {
-    "mongodb": "^6.17.0"
+    "typescript": "^5.8.3"
   }
 }
