#16: fix: at run build command, if out folder dont exists just progress

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -r out && npx tsc -p ./tsconfig.json && cp package.json ./out",
+    "build": "rm -rf out && npx tsc -p ./tsconfig.json && cp package.json ./out",
     "publish": "npm run build && npm publish ./out --access public"
   },
   "repository": {
