#17: feat: was added npm test command before publish in npm

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "rm -rf out && npx tsc -p ./tsconfig.json && cp package.json ./out",
-    "publish": "npm run build && npm publish ./out --access public"
+    "publish": "npm run test && npm run build && npm publish ./out --access public"
   },
   "repository": {
     "type": "git",
